tests/paczka1/fuzzy1/76297287.err
Error in line 2: yuRljWh A420 45,2
Error in line 15: X3BHXTZ05 S657 30,6
Error in line 33: Qu3FZZfCw S526 26,9
Error in line 34: Qu3FZZfCw A420 46,1
